# TBAS_pipeline

./: .gitignore  METHODS.md  OPTIMIZATION_PLAN.md  README.md  TBAS_pipeline_slurm.ipynb  environment.lock.yml  environment.yml  pyproject.toml
analysis/: snv_trio_analysis.ipynb
analysis/covearge/: Arthro_2582_padded_top11_manual_annotated.sorted.merged.bed.coverage.txt  Epilepsy_V2_1662_padded_top8_manual_annotated.sorted.merged.bed.coverage.txt  GRCh38_CMRG_benchmark_gene_coordinates_padding10K.bed.coverage.txt  Microcephaly_1769_padded_top3_manual_annotated.sorted.merged.bed.coverage.txt  Neurodegen_V2_1704_padded_top8_manual_annotated.sorted.merged.bed.coverage.txt  mosdepth_analysis.ipynb  mosdepth_summary_totals.csv
analysis/methylation/: methylation_analysis.ipynb
analysis/tr/: adaptive_sampling_tr_analysis.ipynb
analysis/tr_regions/: adotto_catalog.hg38.lite.Arthro.bed  adotto_catalog.hg38.lite.CMRG.bed  adotto_catalog.hg38.lite.Epilepsy.bed  adotto_catalog.hg38.lite.Microcephaly.bed  adotto_catalog.hg38.lite.Neurodegen.bed
analysis/variant_counts/: count_variants_by_barcode.sh  count_variants_by_barcode_parallel.sh  variant_counts.tsv
benchmarking/: adaptive_methylation_benchmark.ipynb
benchmarking/hg002_variant_calls/: 4_6_HG002_Trio_barcode04.local.phased.vcf.gz.tbi  4_6_HG002_Trio_barcode04_global.germline.kanpig.genotyped.vcf.gz.csi  4_6_HG002_Trio_barcode04_global.germline.vcf.gz.tbi  (+6 more)
scripts/: download_annovar_db.sh
tbas_pipeline/: __init__.py  cli.py  pipeline.py  ranking.py
tests/: test_pipeline.py  test_ranking.py
(+14 files in other folders)
