[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tbas-pipeline"
version = "0.2.0"
description = "Local software pipeline for TBAS (no SLURM sbatch generation)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
tbas-pipeline = "tbas_pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["tbas_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
